@@ -1,3 +1,13 @@
+2010-04-20  Jay Civelli  <jcivelli@chromium.org>
+
+        Reviewed by Dimitri Glazkov.
+
+        [chromium] Pressing tab now closes the select popup as it should.
+        https://bugs.webkit.org/show_bug.cgi?id=37721
+
+        * platform/chromium/PopupMenuChromium.cpp:
+        (WebCore::PopupListBox::handleKeyEvent):
+
 2010-04-20  Yaar Schnitman  <yaar@chromium.org>
 
         Reviewed by Nate Chapin.
